--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 body{
     width: 100vw;
-    height: 610px;
+    height: 100vh;
     background-color: var(--Slate300);
     display: grid;
     place-content: center;
@@ -23,11 +23,11 @@ body{
 }
 
 .card{
-    width: 290px;
-    height: 450px;
+    width: 200px;
+    height: 310px;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
     background-color: var(--White);
     border-radius: 15px;
     gap: 20px;
@@ -47,17 +47,27 @@ body{
     height: 35%;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 5px;
 }
 
 .card__title{
     text-align: center;
     color: var(--Slate900);
+    font-size: 1rem;
 }
 
 .card__description{
     text-align: center;
     color: var(--Slate500);
-    padding: 20px;
-    padding-top: 5px;
+    padding: 10px;
+    font-size: 0.6rem;
+    word-spacing: 2px;
+    line-height: 15px;
+}
+
+@media (max-width: 768px){
+    body{
+        min-height: 100vh;
+        height: auto;
+    }
 }
